crates/nash-parse/src/snapshots/nash_parse__module__tests__module_preserves_type_alias_error.snap
---
source: crates/nash-parse/src/module.rs
description: "Code:\n\ntype alias account"
info: diagnostic
---
nash::syntax

  × Expected `=` in the type alias.
   ╭─[src/Main.nash:1:19]
 1 │ type alias account
   ·                   ─
   ╰────
  help: Write `type alias Name = Type`.
