crates/nash-parse/src/snapshots/nash_parse__module__tests__module_with_empty_impl_then_value.snap
---
source: crates/nash-parse/src/module.rs
assertion_line: 579
description: "Code:\n\nmodule Main exposing (..)\n\nimpl Show unit where\n\nx = 1\n"
---
Module {
    kind: Normal,
    name: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: "Main",
        },
    ),
    exports: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
        value: Open,
    },
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    comments: [],
    imports: [],
    values: [
        Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 1,
                },
                end: Position {
                    line: 6,
                    column: 1,
                },
            },
            value: Value {
                docs: None,
                name: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 1,
                        },
                        end: Position {
                            line: 5,
                            column: 2,
                        },
                    },
                    value: "x",
                },
                arguments: [],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 5,
                        },
                        end: Position {
                            line: 5,
                            column: 6,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
                annotation: None,
                attributes: [],
            },
        },
    ],
    unions: [],
    aliases: [],
    traits: [],
    impls: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 3,
                    column: 21,
                },
            },
            value: Impl {
                docs: None,
                context: [],
                head: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 6,
                        },
                        end: Position {
                            line: 3,
                            column: 15,
                        },
                    },
                    value: Constraint {
                        class: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 6,
                                },
                                end: Position {
                                    line: 3,
                                    column: 10,
                                },
                            },
                            value: "Show",
                        },
                        module: None,
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 11,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 15,
                                    },
                                },
                                value: Type {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 11,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 15,
                                        },
                                    },
                                    name: "unit",
                                    args: [],
                                },
                            },
                        ],
                    },
                },
                methods: [],
                attributes: [],
            },
        },
    ],
    tests: None,
    binops: [],
}
