crates/nash-parse/src/snapshots/nash_parse__module__tests__module_with_empty_trait_then_value.snap
---
source: crates/nash-parse/src/module.rs
assertion_line: 553
description: "Code:\n\nmodule Main exposing (..)\n\ntrait Marker 'a where\n\nx = 1\n"
---
Module {
    kind: Normal,
    name: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: "Main",
        },
    ),
    exports: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
        value: Open,
    },
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    comments: [],
    imports: [],
    values: [
        Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 1,
                },
                end: Position {
                    line: 6,
                    column: 1,
                },
            },
            value: Value {
                docs: None,
                name: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 1,
                        },
                        end: Position {
                            line: 5,
                            column: 2,
                        },
                    },
                    value: "x",
                },
                arguments: [],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 5,
                        },
                        end: Position {
                            line: 5,
                            column: 6,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
                annotation: None,
                attributes: [],
            },
        },
    ],
    unions: [],
    aliases: [],
    traits: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 3,
                    column: 22,
                },
            },
            value: Trait {
                docs: None,
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 7,
                        },
                        end: Position {
                            line: 3,
                            column: 13,
                        },
                    },
                    value: "Marker",
                },
                params: [
                    TypeParam {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 14,
                                },
                                end: Position {
                                    line: 3,
                                    column: 16,
                                },
                            },
                            value: "a",
                        },
                        repr: None,
                    },
                ],
                supers: [],
                methods: [],
                attributes: [],
            },
        },
    ],
    impls: [],
    tests: None,
    binops: [],
}
