crates/nash-parse/src/snapshots/nash_parse__module__tests__module_with_imports.snap
---
source: crates/nash-parse/src/module.rs
assertion_line: 451
description: "Code:\n\nmodule Main exposing (..)\n\nimport List\nimport Maybe exposing (Maybe(..))\n"
---
Module {
    kind: Normal,
    name: Some(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: "Main",
        },
    ),
    exports: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
        value: Open,
    },
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 5,
                column: 1,
            },
        },
    ),
    comments: [],
    imports: [
        Import {
            import: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 8,
                    },
                    end: Position {
                        line: 3,
                        column: 12,
                    },
                },
                value: "List",
            },
            alias: None,
            exposing: Explicit(
                [],
            ),
        },
        Import {
            import: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 8,
                    },
                    end: Position {
                        line: 4,
                        column: 13,
                    },
                },
                value: "Maybe",
            },
            alias: None,
            exposing: Explicit(
                [
                    Upper {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 24,
                                },
                                end: Position {
                                    line: 4,
                                    column: 29,
                                },
                            },
                            value: "Maybe",
                        },
                        privacy: Public(
                            Region {
                                start: Position {
                                    line: 4,
                                    column: 30,
                                },
                                end: Position {
                                    line: 4,
                                    column: 32,
                                },
                            },
                        ),
                    },
                ],
            ),
        },
    ],
    values: [],
    unions: [],
    aliases: [],
    traits: [],
    impls: [],
    tests: None,
    binops: [],
}
